--- a/index.html
+++ b/index.html
@@ -1,23 +1,94 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>Clotick</title>
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <div class="bg-layer"></div>
+  <div class="bg-layer"></div>
   <div class="clock">
     <div class="horizintal"></div>
-    <div class="digit"><div class="strip" id="d0"></div></div>
-    <div class="digit"><div class="strip" id="d1"></div></div>
+    
+    <div class="digit">
+      <div class="lg-wrapper strip menu" id="d0">
+        <div class="lg-effect"></div>
+        <div class="lg-tint"></div>
+        <div class="lg-shine"></div>
+      </div>
+    </div>
+
+    <div class="digit">
+      <div class="lg-wrapper strip menu" id="d1">
+        <div class="lg-effect"></div>
+        <div class="lg-tint"></div>
+        <div class="lg-shine"></div>
+      </div>
+    </div>
+
     <div class="separator">:</div>
-    <div class="digit"><div class="strip" id="d2"></div></div>
-    <div class="digit"><div class="strip" id="d3"></div></div>
+
+    <div class="digit">
+      <div class="lg-wrapper strip menu" id="d2">
+        <div class="lg-effect"></div>
+        <div class="lg-tint"></div>
+        <div class="lg-shine"></div>
+      </div>
+    </div>
+
+    <div class="digit">
+      <div class="lg-wrapper strip menu" id="d3">
+        <div class="lg-effect"></div>
+        <div class="lg-tint"></div>
+        <div class="lg-shine"></div>
+      </div>
+    </div>
+
     <div class="separator">:</div>
-    <div class="digit"><div class="strip" id="d4"></div></div>
-    <div class="digit"><div class="strip" id="d5"></div></div>
+    
+    <div class="digit">
+      <div class="lg-wrapper strip menu" id="d4">
+        <div class="lg-effect"></div>
+        <div class="lg-tint"></div>
+        <div class="lg-shine"></div>
+      </div>
+    </div>
+
+    <div class="digit">
+      <div class="lg-wrapper strip menu" id="d5">
+        <div class="lg-effect"></div>
+        <div class="lg-tint"></div>
+        <div class="lg-shine"></div>
+      </div>
+    </div>
+
   </div>
+
+  <svg style="display: none">
+    <filter id="glass-distortion" x="0%" y="0%" width="100%" height="100%" filterUnits="objectBoundingBox">
+      <feTurbulence type="fractalNoise" baseFrequency="0.01 0.005" numOctaves="1" seed="4" result="turbulence" />
+
+      <feComponentTransfer in="turbulence" result="mapped">
+        <feFuncR type="gamma" amplitude="1" exponent="10" offset="0.5" />
+        <feFuncG type="gamma" amplitude="0" exponent="1" offset="0" />
+        <feFuncB type="gamma" amplitude="0" exponent="1" offset="0.5" />
+      </feComponentTransfer>
+
+      <feGaussianBlur in="turbulence" stdDeviation="3" result="softMap" />
+
+      <feSpecularLighting in="softMap" surfaceScale="5" specularConstant="1" specularExponent="100"
+        lighting-color="white" result="specLight">
+        <fePointLight x="-200" y="-200" z="300" />
+      </feSpecularLighting>
+
+      <feComposite in="specLight" operator="arithmetic" k1="0" k2="1" k3="1" k4="0" result="litImage" />
+
+      <feDisplacementMap in="SourceGraphic" in2="softMap" scale="150" xChannelSelector="R" yChannelSelector="G" />
+    </filter>
+  </svg>
   <script src="script.js"></script>
 </body>
+
 </html>
